[tool.poetry]
name = "nonebot-plugin-phlogo"
version = "0.0.3"
description = "生成ph风格logo"
authors = ["kexue <x@kexue.io>"]
license = "MIT"
homepage = "https://github.com/kexue-z/nonebot-plugin-phlogo"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.3"
Pillow = ">=8.3.1"
nonebot2 = ">=2.0.0-beta.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
